--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -3,12 +3,10 @@
     <head>
         <title>treino</title>
         <meta charset="utf-8">
-        <!--<link rel="stylesheet" type="text/css" href="./folhadeestilo/blablabla.css">
-        <link rel="stylesheet" type="text/css" href="./folhadeestilo/teste.css">
-        --></head>
-    <body>
         <link rel="stylesheet" type="text/css" href="./folhadeestilo/blablabla.css">
         <link rel="stylesheet" type="text/css" href="./folhadeestilo/teste.css">
+        </head>
+    <body>
         <p>ãé</p>
     </body>
 </html>
